force-app/main/default/objects/ServiceResource/fields/Contractor_s_Service_Territory__c.field-meta.xml
<CustomField>
    <fullName>Contractor_s_Service_Territory__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contractor&apos;s Service Territory</label>
    <referenceTo>ServiceTerritory</referenceTo>
    <relationshipLabel>Service Resources</relationshipLabel>
    <relationshipName>Service_Resources</relationshipName>
    <type>Lookup</type>
</CustomField>