force-app/main/default/objects/ServiceResource/fields/Cost_Per_Mile__c.field-meta.xml
<CustomField>
    <fullName>Cost_Per_Mile__c</fullName>
    <description>Represents the Service Resource&apos;s cost per mile traveled. Value is used to calculate the savings in travel time after optimization has run.</description>
    <label>Cost Per Mile</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>