force-app/main/default/objects/ServiceResource/fields/Optimization_KPI__c.field-meta.xml
<CustomField>
    <fullName>Optimization_KPI__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Marking this field &apos;TRUE&apos; will include the service resource&apos;s metrics within the Optimization KPI reports and dashboards</description>
    <label>Optimization KPI</label>
    <type>Checkbox</type>
</CustomField>